namespace BarberLosPeluchitos.Core.Options;

public class RecordatorioOptions
{
    public int HorasAnticipacion { get; set; } = 24;
    public int IntervaloChequeoMinutos { get; set; } = 15;
}
// HU-10: Recordatorio de cita próxima - Opciones de configuración
